# buglog

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.rst  mypy.ini  noxfile.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: codeql-analysis.yml  coverage.yml  tests.yml
buglog/: __init__.py  bootstrap.py  cli.py  dump.py  fuzzy.py  prompt.py  utils.py
buglog/data/: config.py
docs/: conf.py  index.rst  reference.rst
src/buglog/: cli.py  dump.py  fuzzy.py  parse_rst.py  prompt.py  utils.py
src/buglog/data/: config.py
tests/: conftest.py  test_bootstrap.py  test_cli.py  test_prompt.py
