[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.flakehell]
format = "colored"  # colored/grouped/stat/json/gitlab
show_source = true
max_line_length = 79
max_complexity = 6     # mccabe
max_annotations_complexity = 4     # flake8-annotations-complexity
no_accept_encodings = true
max_expression_complexity = 7     # flake8-expression-complexity

[tool.flakehell.exceptions."buglog/data/*"]
"flake8-*" = ["-*"]

[tool.flakehell.plugins]
dlint = ["+*"]
mccabe = ["+*"]
pyflakes = ["+*"]
"flake8-*" = ["+*"]
flake8-bandit = ["+*", "-S101"]
flake8-cognitive-complexity = ["-*"]
flake8-docstrings = ["-*"]
flake8-print = ["-*"]

[tool.poetry]
authors = ["lainiwa <kirrik96@gmail.com>"]
description = ""
name = "buglog"
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.9.1"
blessings = "^1.7"
click = "^7.1.2"
docutils = "^0.16"
httpx = "^0.13.3"
timefhuman = { git = "https://github.com/alvinwan/timefhuman", rev = "ae31f38" }
prompt_toolkit = "^3.0.5"
python = ">=3.7,<4.0"
readchar = "^2.0.1"
xdg = "^4.0.1"

[tool.poetry.dependencies.pydantic]
extras = ["typing_extensions"]
version = "^1.5.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^19.10b0"
dlint = "^0.10.3"  # Encourage best practices + security
flake8-alfred = "^1.1.1"  # Check for unsafe/obsolete symbols
flake8-annotations = "^2.1.0"
flake8-annotations-complexity = "^0.0.5"  # Validate annotations complexity
flake8-bandit = "^2.1.2"  # Check security
flake8-broken-line = "^0.2.0"  # Don't break the line
flake8-bugbear = "^20.1.4"  # Likely bugs and design problems
flake8-builtins = "^1.5.3"  # Builtins used as variables or parameters
flake8-coding = "^1.3.2"
flake8-cognitive-complexity = "^0.0.2"  # Functions' cognitive complexity
flake8-comprehensions = "^3.2.3"  # Better list/set/dict comprehensions
flake8-debugger = "^3.2.1"  # Check for debug statements
flake8-docstrings = "^1.5.0"  # Checks provided by pep257
flake8-eradicate = "^0.4.0"  # Commented out or dead code
flake8-executable = "^2.0.3"  # Executable flags and shebangs
flake8-expression-complexity = "^0.0.8"  # Annotations' complexity
flake8-fixme = "^1.1.1"  # Check for FIXME, TODO etc notes
flake8-functions = "^0.0.4"  # Function parameters (length, complexity, etc)
flake8-mutable = "^1.2.0"  # Check for mutable default arguments
flake8-pep3101 = "^1.3.0"  # Ceck for old string formatting
flake8-pie = "^0.5.0"  # Misc. lints
flake8-print = "^3.1.4"  # Print statements
flake8-string-format = "^0.3.0"  # Check .format()
flake8-tidy-imports = "^4.1.0"
flakehell = "^0.5.0"
ipython = "^7.16.1"
mypy = "^0.782"
pep8-naming = "^0.11.1"  # Check naming conventions
pre-commit = "^2.5.1"
reorder-python-imports = "^2.3.1"
safety = "^1.9.0"
toml-sort = "^0.18.0"
restview = "^2.9.2"
pytest = "^6.0.0rc1"

[tool.poetry.scripts]
bug = 'buglog.cli:cli'

[tool.pytest.ini_options]
addopts = '''
  --doctest-modules
  --verbose
'''
markers = '''
    slow: marks tests as slow (deselect with '-m "not slow"')
    serial
'''
